find one
build find one route and its depentecy files
