# cmd/api/docs/swagger.json
@@ -66,6 +66,42 @@
                     }
                 }
             }
+        },
+        "/users": {
+            "get": {
+                "description": "Get one users",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "users"
+                ],
+                "summary": "Get one users",
+                "operationId": "FindOne",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User Id : ",
+                        "name": "userId",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    },
+                    "422": {
+                        "description": "Unprocessable Entity",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
